# Custom-Outbound-GTM-Machine

./: .env.example  .gitignore  README.md  pyproject.toml
briefs/: construction-broad.yaml  construction-signal.yaml  construction.yaml  healthcare-admin.yaml
docs/: construction-messaging-taste-test.txt  construction-technology-signal-finding.md  healthcare-playbook-gap-analysis.md  messaging-standard.md
evals/: __init__.py  extract.py  rubric.py
evals/rubrics/: v1.yaml
outbound/: __init__.py  brief.py  cli.py  config.py  db.py  export.py  http.py  ingest.py  models.py  report.py  run.py  sync.py
outbound/load/: smartlead.py
outbound/pipeline/: enrich.py  personalize.py  signals_jobs.py  signals_news.py  validate.py
outbound/prompts/: messaging.md
outbound/sources/: apollo.py
scripts/: enrich_only.py  health_counts.py  load_new_campaign.py  news_ab_test.py  personalize_only.py  signal_complete.py  signal_scan.py  signal_scan_csv.py  tech_signal_export.py
tests/: test_brief.py  test_config.py  test_db.py  test_pipeline.py  test_rubric.py
