[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outbound-engine"
version = "0.1.0"
description = "A replenishing-reservoir cold-email pipeline: source, qualify, personalize, and load leads — bring your own API keys."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Outbound Engine" }]
keywords = ["cold-email", "outbound", "apollo", "smartlead", "sales"]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "anthropic>=0.39",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dateutil>=2.9",
    "tqdm>=4.66",
    "ddgs>=0.1; python_version >= '3.10'",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0"]

[project.scripts]
outbound = "outbound.cli:app"

[tool.setuptools.packages.find]
include = ["outbound*"]

[tool.setuptools.package-data]
outbound = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
